--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="container">
         <header>
             <div class="header-logo">
-                <img src="images/logo.png" alt="Logo">
+                <a href="index.html">
+                    <img src="images/logo.png" alt="Logo">
+                </a>
                 <div class="phone">
                     <i class="fas fa-mobile-alt"></i> +123 456 7890
                 </div>
